# pcie-usb-platform-tests

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
scripts/: run_platform_tests.py
src/: debugfs_handler.cpp  debugfs_handler.h  pcie_test.cpp  pcie_test.h  usb_test.cpp  usb_test.h
src/usb/: usb_device_info.h  usb_manager.cpp  usb_manager.h
src/utils/: fs_helper.cpp  fs_helper.h
